# xbot2_tools

./: CMakeLists.txt  README.md
cmake/: xbot2_toolsConfig.cmake.in
monitor/: CMakeLists.txt
monitor/include/xbot2_tools/monitor/: monitor.h
monitor/src/: monitor.cpp  trajectory_plugin.cpp  trajectory_plugin.h
